--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -4,29 +4,72 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:lnk="http://java.sun.com/jsf/composite/linkare">
     <h:head>
-        <style type="text/css">
-            .animated .ui-progressbar-value {
-                border: 0px;
-                background-image: url("Imagenes/bar.gif");
-                padding: 0px;
-            }
-        </style>
+
+
     </h:head> 
     <h:body>
         <h:form id="form">
-            <p:growl id="growl" />
-            <p:panel   id="PanelTotal" header="PRUEBAS" style=" font-size: 13px; position: absolute; width: 874px; height: 530px;" >
-                <h3>Ajax ProgressBar with Growl Integration</h3>  
-                <p:commandButton value="Start" onclick="pbAjax.start();
-                        startButton2.disable();" widgetVar="startButton2" />  
-                <p:commandButton value="Cancel" actionListener="#{controlPruebasUnitarias.cancel}" oncomplete="pbAjax.cancel();startButton2.enable();" />  
+            <p:panel id="PanelTotal" header="PRUEBAS" style=" font-size: 13px; position: absolute; width: 874px; height: 530px;" >
+                <p:dataTable id="datosExperiencia" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" value="#{controlPruebasUnitarias.listExperienciaLaboralEmpl}" 
+                             editable="true" editMode="cell" rows="4" 
+                             scrollable="true" scrollWidth="830" scrollHeight="110" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width: 830px"
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
-                <p:progressBar id="barra" rendered="true" widgetVar="pbAjax" ajax="true" value="#{controlPruebasUnitarias.progress}" labelTemplate="{value}%" styleClass="animated" interval="500">  
-                    <p:ajax event="complete" listener="#{controlPruebasUnitarias.onComplete}" update="growl" oncomplete="startButton2.enable()"/>  
-                </p:progressBar>
-                <p:commandButton value="Accionelo" actionListener="#{controlPruebasUnitarias.cometalo()}"/>
+
+                    <p:column headerText="Empresa" sortBy="#{info.empresa}" filterBy="#{info.empresa}" filterMatchMode="contains" width="133"
+                              id="expEmpresa" filterStyle="display: none; visibility: hidden;"  style="width: 70px; font-size: 11px">                                  
+                        <p:cellEditor>  
+                            <f:facet name="output"><h:outputText value="#{info.empresa}" style="width: 100px; font-size: 11px;text-transform: uppercase"/></f:facet>  
+                            <f:facet name="input">
+                                <p:inputText value="#{info.empresa}" id="editarEmpresaE" style="font-size: 11px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
+                                </p:inputText>
+                            </f:facet>  
+                        </p:cellEditor>
+                        <f:facet name="footer">
+                            <h:outputText value="Empresas"/>
+                        </f:facet>
+                    </p:column>
+
+                    <p:column headerText="Fecha Ingreso" sortBy="#{info.fechadesde}" filterBy="#{info.fechadesde}" filterMatchMode="contains" id="expFechaInicio" width="100"
+                              filterStyle="display: none; visibility: hidden;"  style="width: 80px; font-size: 11px">                                  
+
+                        <lnk:calendar id="myDate" value="#{info.fechadesde}"   >
+                            <f:ajax event="click" listener="#{controlPruebasUnitarias.accion()}"  />
+                            <f:ajax event="move" listener="#{controlPruebasUnitarias.eventoMouse()}" />
+                        </lnk:calendar>
+
+                        <f:facet name="footer">
+                                <h:outputText value="Fecha Ingreso"/>
+                        </f:facet>
+                    </p:column>
+
+                    <p:column headerText="Fecha Retiro" sortBy="#{info.fechahasta}" filterBy="#{info.fechahasta}" filterMatchMode="contains" id="expFechaRetiro" width="100"
+                              filterStyle="display: none; visibility: hidden;"  style="width: 80px; font-size: 11px">                                  
+                        <p:cellEditor>  
+                            <f:facet name="output">
+                                <h:outputText value="#{info.fechahasta}" style="width: 100px; font-size: 11px">
+                                    <f:convertDateTime pattern="dd/MM/yyyy" />
+                                </h:outputText>
+                            </f:facet>  
+                            <f:facet name="input" >
+                                <p:calendar value="#{info.fechahasta}" id="editarFechaHastaE" style="font-size: 11px; border-radius: 0px; width: 93.5%;text-transform: uppercase"
+                                            locale="es" pattern="dd/MM/yyyy" mode="popup">
+                                    <f:convertDateTime pattern="dd/MM/yyyy" />
+                                </p:calendar>
+                            </f:facet>  
+                        </p:cellEditor>
+                        <f:facet name="footer">
+                            <h:outputText value="Fecha Retiro" />
+                        </f:facet>
+                    </p:column>
+
+
+                </p:dataTable>
+
             </p:panel>
         </h:form>
     </h:body>
