--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -8,6 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <link href="./resources/css/Tema.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="./resources/js/calendarioIdioma.js"></script>
         <title>Aplicativo de Nomina Designer RHN</title>
     </h:head>
