--- a/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
@@ -240,7 +240,7 @@
                             <p:commandButton value="Anteriores Contratos" style="position: absolute; top: 146px; left: 700px; "/>
                         </fieldset>
 
-                        <p:scrollPanel style="position: absolute; top: 250px; width: 855px; height: 243px; font-size: 11px; left: 10px; border: none">  
+                        <p:scrollPanel style="position: absolute; top: 250px; width: 855px; height: 243px; font-size: 11px; left: 10px; border: none" mode="native">  
                             <fieldset style="position: relative; width: 817px; height: 75px; border-radius: 7px; left: -2px ">
 
                                 <h:outputText value="Perfil Profesional" style="position: absolute; left: 10px; font-weight: bold; color: #14388B;" />
