--- a/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
@@ -203,7 +203,7 @@
                    
                     <!--DIALOGO DUPLICAR-->
 
-                    <p:dialog id="DuplicarRegistroCiudad" header="#{msg['nuevoregistro']}" widgetVar="DuplicarRegistroCiudad" closable="false" resizable="false"  draggable="false" modal="true" height="350" width="400" style="font-size: 12px; padding: 0px">  
+                    <p:dialog id="DuplicarRegistroCiudad" header="#{msg['duplicarregistro']}" widgetVar="DuplicarRegistroCiudad" closable="false" resizable="false"  draggable="false" modal="true" height="350" width="400" style="font-size: 12px; padding: 0px">  
 
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
