--- a/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
@@ -575,7 +575,7 @@
                     </p:dialog>
 
 
-                    <p:dialog id="DuplicarRegistroCuenta" header="#{msg['nuevoregistro']}" widgetVar="DuplicarRegistroCuenta" closable="false" resizable="false"  draggable="false" modal="true" height="375" width="800" style="font-size: 12px; padding: 0px">  
+                    <p:dialog id="DuplicarRegistroCuenta" header="#{msg['duplicaregistro']}" widgetVar="DuplicarRegistroCuenta" closable="false" resizable="false"  draggable="false" modal="true" height="375" width="800" style="font-size: 12px; padding: 0px">  
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
                         <p:panel id="duplicaC" style="border: none;">
 
