--- a/DesignerRHN/DesignerRHN-war/web/EmplInformacionAdicional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplInformacionAdicional.xhtml
@@ -384,7 +384,7 @@
                         </p:panel>
                     </p:dialog>
 
-                    <p:dialog id="DuplicarRegistroInfoAd" header="#{msg['nuevoregistro']}" widgetVar="DuplicarRegistroInfoAd" closable="false" resizable="false"  draggable="false" modal="true" height="440" width="400" style="font-size: 12px; padding: 0px">  
+                    <p:dialog id="DuplicarRegistroInfoAd" header="#{msg['duplicarregistro']}" widgetVar="DuplicarRegistroInfoAd" closable="false" resizable="false"  draggable="false" modal="true" height="440" width="400" style="font-size: 12px; padding: 0px">  
 
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
