--- a/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/detalleconcepto.xhtml
@@ -17,7 +17,7 @@
 
                         <h:outputText value="Concepto : " style="position: absolute;left: 45px; top: 80px;color: #14388B;font-weight: bold"/>
                         <h:outputText id="nombreConcepto" value="#{controlDetalleConcepto.comportamientoConcepto}" style="font-weight: bold; color: #BF1A1A; position: absolute; left: 115px; top: 80px"/>
-                        <p:commandButton value="" id="btnDeteleConcepto" style="position: absolute; top: 75px; left: 10px;background-image: url(Imagenes/deleteConcepto.png);background-size: 100% 100%; background-repeat: no-repeat;width: 25px; height: 30px;" onclick="paso1Eliminacion.show()"/>
+                        <p:commandButton value="" id="btnDeteleConcepto" style="position: absolute; top: 75px; left: 10px;background-image: url(Imagenes/deleteConcepto.png);background-size: 100% 100%; background-repeat: no-repeat;width: 25px; height: 30px;" actionListener="#{controlDetalleCuenta.validarEliminacionConcepto()}"/>
                         <p:tooltip style="font-size: 12px" for="btnDeteleConcepto" value="Hoja de vida del concepto" />
 
 
@@ -711,6 +711,12 @@
                         <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlDetalleConcepto.guardadoGeneral()}" style="position: absolute; top: 60px; left: 215px" process="@this" />
                         <p:commandButton value="No" onclick="confirmarGuardar.hide();"  style="position: absolute; top: 60px; left: 255px" process="@this" />
                         <p:commandButton value="Cancelar" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                    </p:dialog>
+                    
+                     <p:dialog id="errorEliminacionConcepto" header="ELIMINACION - PASO 1 DE 4" widgetVar="errorEliminacionConcepto"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
+                        <h:outputText value="Este concepto tiene acumulados de nómina por tal motivo no lo puede eliminar." style="position: absolute; left: 70px; top: 20px; width: 250px; font-weight:bold; text-align: center" />
+                        <p:commandButton value="OK" onclick="errorEliminacionConcepto.hide();" style="position: absolute; top: 60px; left: 270px" process="@this" />
                     </p:dialog>
                     
                      <p:dialog id="paso1Eliminacion" header="ELIMINACION - PASO 1 DE 4" widgetVar="paso1Eliminacion"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
