--- a/DesignerRHN/DesignerRHN-war/web/atextrarecargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/atextrarecargo.xhtml
@@ -12,15 +12,15 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:growl id="growl" showDetail="true" />
-                    <p:panel  id="PanelTotal" header="Grupos Salariales" style=" font-size: 13px; position: absolute; width: 874px; height: 530px;  text-align: left" >  
+                    <p:growl id="growl" showDetail="true"/>
+                    <p:panel  id="PanelTotal" header="Grupos Salariales" style=" font-size: 13px; position: absolute; width: 874px; height: 540px;  text-align: left" >  
 
-                        <p:commandButton style="position: absolute; left: 710px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosExtraRecargo" process="@this" />
-                        <p:commandButton style="position: absolute; left: 20px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlATExtraRecargo.cancelarModificacionGeneral()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 796px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlATExtraRecargo.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 710px; top: 515px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosExtraRecargo" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 515px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlATExtraRecargo.cancelarModificacionGeneral()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 796px; top: 515px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlATExtraRecargo.salir()}" action="nomina" process="@this" />
 
 
-                        <fieldset style="position: absolute; left: 10px; top: 70px; font-size: 10px; width: 830px; height: 230px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 10px; top: 65px; font-size: 10px; width: 830px; height: 235px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Recargos Extras</strong></legend>
 
                             <p:dataTable id="datosExtraRecargo" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;width: 820px"                           
@@ -52,7 +52,7 @@
                                         <f:facet name="output"><h:outputText value="#{info.descripcion}" /></f:facet>  
                                         <f:facet name="input">
                                             <p:inputText value="#{info.descripcion}" id="editarExtraDescripcion" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
-                                                <p:ajax event="change" listener="#{controlATExtraRecargo.modificarExtraRecargo(indice)}" update="editarExtraDescripcion" process="@this"/>
+                                                <p:ajax event="change" listener="#{controlATExtraRecargo.procesoModificacionExtraRecargo(indice)}" update="editarExtraDescripcion" process="@this"/>
                                                 <p:ajax event="select" listener="#{controlATExtraRecargo.cambiarIndice(indice, 1)}" process="@this"/>
                                             </p:inputText>
                                         </f:facet>  
@@ -147,7 +147,7 @@
                             </p:dataTable>  
                         </fieldset> 
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 33px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlATExtraRecargo.guardarGeneral()}" process="@this" />
@@ -194,7 +194,7 @@
                         </p:toolbar> 
 
 
-                        <fieldset style="position: absolute; left: 10px; top: 315px; font-size: 10px; width: 830px; height: 177px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 10px; top: 315px; font-size: 10px; width: 830px; height: 187px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Detalles</strong></legend>
                             <!-- TABLA EMPLVIGENCIAREFORMALABORAL -->
 
@@ -216,7 +216,7 @@
                                         </f:facet>  
                                         <f:facet name="input">
                                             <p:inputText value="#{infoD.horasinicial}" id="editarDetalleHI" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
-                                                <p:ajax event="change" listener="#{controlATExtraRecargo.modificarDetalleExtraRecargo(indiceD)}" update="editarDetalleHI" process="@this"/>
+                                                <p:ajax event="change" listener="#{controlATExtraRecargo.procesoModificacionDetalleExtraRecargo(indiceD)}" update="editarDetalleHI" process="@this"/>
                                                 <p:ajax event="select" listener="#{controlATExtraRecargo.cambiarIndiceDER(indiceD,0)}" process="@this"/> 
                                                 <f:convertNumber pattern="#00.00" />
                                             </p:inputText>
@@ -237,7 +237,7 @@
                                         </f:facet>  
                                         <f:facet name="input">
                                             <p:inputText value="#{infoD.horasfinal}" id="editarDetalleHF" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
-                                                <p:ajax event="change" listener="#{controlATExtraRecargo.modificarDetalleExtraRecargo(indiceD)}" update="editarDetalleHF" process="@this"/>
+                                                <p:ajax event="change" listener="#{controlATExtraRecargo.procesoModificacionDetalleExtraRecargo(indiceD)}" update="editarDetalleHF" process="@this"/>
                                                 <p:ajax event="select" listener="#{controlATExtraRecargo.cambiarIndiceDER(indiceD,1)}" process="@this"/> 
                                                 <f:convertNumber pattern="#00.00" />
                                             </p:inputText>
